[package]
authors = ["Hunter Goldstein <hunter.d.goldstein@gmail.com>"]
categories = [
    "science",
    "parsing",
]
description = "Rust library for parsing and processing arithmetic expressions"
homepage = "https://gitlab.redox-os.org/redox-os/calc"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = [
    "math",
    "calculator",
]
license-file = "LICENSE"
name = "calculate"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/calc"
version = "0.7.0"
edition = "2018"

[[bin]]
name = "calc"
path = "src/bin.rs"

[dependencies]
atty = "0.2.11"
clap = "2.33.0"
decimal = { version = "2.0.4", default-features = false }
failure = "0.1.5"
redox_liner = "0.5.1"
num = "0.3"
rand = "0.7.0"

[lib]
name = "calc"
path = "src/lib.rs"
