[package]
authors = ["Hunter Goldstein <hunter.d.goldstein@gmail.com>"]
categories = [
    "science",
    "parsing",
]
description = "Rust library for parsing and processing arithmetic expressions"
homepage = "https://gitlab.redox-os.org/redox-os/calc"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = [
    "math",
    "calculator",
]
license-file = "LICENSE"
name = "calculate"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/calc"
version = "0.8.0"
edition = "2018"

[[bin]]
name = "calc"
path = "src/bin.rs"

[dependencies]
atty = "0.2"
clap = "2.33"
decimal = { version = "2.1", default-features = false }
redox_liner = "0.5.2"
num = "0.4"
rand = "0.7"

[lib]
name = "calc"
path = "src/lib.rs"
